@@ -31,19 +31,13 @@
 #include <QXmlStreamReader>
 
 #include "cell.hxx"
+#include "decl.hxx"
 #include "i18n.hxx"
 #include "tag.hh"
 #include "tag.hxx"
 #include "Value.hpp"
 
 namespace ods	{ // ods::
-
-class DrawFrame;
-class Formula;
-class Prefix;
-class Row;
-class Style;
-class Tag;
 
 class ODS_API Cell
 {
@@ -139,11 +133,10 @@ public:
 	SetCovered(const bool covered = true);
 
 	void
-	SetCurrencyValue(const double num,
-		const ods::i18n::CurrencyType *curr_type = nullptr);
+	SetCurrencyValue(const double num, ods::Style *style = nullptr);
 	
 	void
-	SetFormula(ods::Formula*);
+	SetFormula(ods::Formula*, ods::Style *style = nullptr);
 	
 	void
 	SetNumColsRepeated(const quint16 num);
@@ -187,9 +180,6 @@ private:
 	void
 	Init();
 
-	void
-	SetCurrencyType(const ods::i18n::CurrencyType *kCurrencyType);
-	
 	void
 	UpdateDrawFrame();
 	
